envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: "0.0.0.0"
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: "http-route"
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/user"
                route:
                  cluster: user-service
              - match:
                  prefix: "/product"
                route:
                  cluster: user-product
          http_filters:
            -
                name: envoy.filters.http.router
  clusters:
  - name: user-service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: user-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "0.0.0.0"
                port_value: 1338
  - name: user-product
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: user-product
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "0.0.0.0"
                port_value: 1337
